CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

INCLUDE_DIRECTORIES(Logger)
INCLUDE_DIRECTORIES(TG)
INCLUDE_DIRECTORIES(MG)
INCLUDE_DIRECTORIES(MD5)
INCLUDE_DIRECTORIES(/opt/kungfu/toolchain/boost-1.62.0/include/)
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../include)
include_directories(../UnitEngine/Unit ../UnitEngine/utils)

LINK_DIRECTORIES(/opt/kungfu/toolchain/boost-1.62.0/lib)

#ADD_SUBDIRECTORY(Logger)
ADD_SUBDIRECTORY(TG)
ADD_SUBDIRECTORY(MG)