CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(GateWay)

INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES(../UnitEngine/Logger)
INCLUDE_DIRECTORIES(../UnitEngine/Paged)
INCLUDE_DIRECTORIES(../UnitEngine/Unit)
INCLUDE_DIRECTORIES(../UnitEngine/utils)
INCLUDE_DIRECTORIES(Dao)
INCLUDE_DIRECTORIES(Base)

#LINK_DIRECTORIES(/opt/kungfu/toolchain/boost-1.62.0/lib)

ADD_SUBDIRECTORY(TG)
ADD_SUBDIRECTORY(MG)