CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(dcsslog)

set(CMAKE_CXX_STANDARD 11)

SET(LIB_SOURCE_FILES DCSSLog.cpp DCSSLog.h)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${LIB_SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} log4cplus)

INSTALL(FILES DCSSLog.h DESTINATION "include")
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION "lib/unit")